--- a/mock_components/widgets/stylesheets/index.css
+++ b/mock_components/widgets/stylesheets/index.css
@@ -3,16 +3,24 @@
 .auto {
     color: white;
     font-weight: bold;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     width: 191px;
     height: 200px;
     border: 2px solid black;
     margin: 0 20px 20px 20px;
     padding: 10px;
-    background-color: violet;
-    background-image: url(https://hd.unsplash.com/6/blurred_lines.jpeg);
+    background-color: cyan;
     background-size: cover;
     background-position: center;
+}
+
+.auto > input{
+    margin: 10px 30px 0 30px;
+    border: 1px solid black;
+}
+
+.auto li{
+    cursor: pointer;
+    list-style-type: square;
 }
 
  .auto-enter {
